...
            }
        }) {
            Image(systemName: "line.horizontal.3")
                .imageScale(.large)
                .foregroundColor(.white)
                // テスト時に指定するためのid
                .accessibilityIdentifier("menuIconImage")
        }
        // 下から出てくるモーダル的なもの
//        .sheet(isPresented: $isMenuOpen, content: {
//            Button(action: {
//                model.fetchData(apiFlg: "logout")
//                isMenuOpen.toggle()
...
